--- a/templets/books/book.html
+++ b/templets/books/book.html
@@ -47,6 +47,14 @@
         {% endfor %}
     </div>
     {% endif %}
+<div class="add_comment">
+    <form method = "post">
+        {% csrf_token %}
+        {{form.as_p }}
+        <input type="submit" value="post">
+    </form>
+
+</div>
 
 </div>
 
