--- a/templets/home.html
+++ b/templets/home.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>back ground will come here</h1>
+<h1>back ground will come here <h1>{{request.user.username}}</h1></h1>
 {% endblock %}
