--- a/templets/books/book.html
+++ b/templets/books/book.html
@@ -48,9 +48,11 @@
     </div>
     {% endif %}
 <div class="add_comment">
+    <br>
+    <h3 style="text-align: center;">give your Reviews</h3>
     <form method = "post">
         {% csrf_token %}
-        {{form.as_p }}
+        {{ form.as_p }}
         <input type="submit" value="post">
     </form>
 
