--- a/templets/books/book_main.html
+++ b/templets/books/book_main.html
@@ -135,15 +135,15 @@
     <div class="side_b">
         <a href="/books/">
             <div class="block_v">
-                <h2>Find BOOKS</h2>
+                <h2>Search Books</h2>
             </div>
         </a>
 
-        <a href="/books_tbale/">
+        <!-- <a href="/books_tbale/">
             <div class="list_v">
                 <h2>List View</h2>
             </div>
-        </a>
+        </a> -->
     </div>
 
 {% endblock %}
