--- a/templets/books/books.html
+++ b/templets/books/books.html
@@ -67,7 +67,7 @@
             </a>
         {% else %}
             <a href="/books/">
-                <p class="switch_b">Collection View</p>
+                <p class="switch_b">Normal View</p>
             </a>
         {% endif %}
     </div>
