--- a/templets/account/login.html
+++ b/templets/account/login.html
@@ -15,9 +15,9 @@
     {% get_providers as socialaccount_providers %}
 
     {% if socialaccount_providers %}
-    <p>{% blocktrans with site.name as site_name %}Please sign in with one
+    <!-- <p>{% blocktrans with site.name as site_name %}Please sign in with one
     of your existing third party accounts.<br>Or, <a href="{{ signup_url }}">sign up</a>
-    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
 
     <div class="socialaccount_ballot">
 
