--- a/templets/profiles/profile.html
+++ b/templets/profiles/profile.html
@@ -94,7 +94,7 @@
     }
 
     .returned_bks {
-        background-color: rgb(223, 221, 218);
+        background-color: #dde0e0;
         padding-bottom: 2%;
         border-radius: 20px;
     }
@@ -116,7 +116,7 @@
     }
 
     .prof_name {
-        background-color: rgb(102, 100, 98);
+        background-color: rgb(228, 226, 224);
         width: 50%;
         text-align: center;
         margin-top: 1%;
@@ -127,7 +127,7 @@
     }
 
     .prof_email {
-        background-color: burlywood;
+        background-color: rgb(228, 226, 224);
         width: 50%;
         margin-left: 25%;
         margin-top: 1%;
@@ -178,7 +178,7 @@
             <table class="returned_bks">
                 <tr>
                     <th class="book_name">Name of the book</th>
-                    <th id="return_date">Returned on</th>
+                    <th id="return_date">Placed on</th>
                 </tr>
 
                 {% for b in qs3 %}
