--- a/templets/home.html
+++ b/templets/home.html
@@ -199,9 +199,15 @@
     <a href="/book_main/" style="text-decoration: none;">
         <p id="search_m">Search for our book</p>
     </a>
-    <a href="/profile/" style="text-decoration: none;">
+    <!-- <a href="/profile/" style="text-decoration: none;">
         <p id="search_m">Get To Your Profile</p>
-    </a>
+    </a> -->
+    {% if request.user.is_authenticated %}
+            <a href="/profile/" style="text-decoration: none;"><p id="search_m">Go to your profile</p></a>
+        {% else %}
+            <a href="/accounts/login/" style="text-decoration: none;"><p id="search_m">Go to your profile</p></a>
+    {% endif %}
+
 </div>
     
 {% endblock %}
