changed some font

--- a/templets/home.html
+++ b/templets/home.html
@@ -9,7 +9,7 @@
         /* background-color: rgb(120, 128, 15); */
         width: 30%;
         text-align: right;
-        margin-top: 15%;
+        margin-top: 13%;
         float: left;
     }
 
@@ -197,7 +197,7 @@
     <p class="main_head">Welcome to</p>
     <p class="main_head">Get Your Book</p>
     <a href="/book_main/" style="text-decoration: none;">
-        <p id="search_m">Search for our book</p>
+        <p id="search_m">Search for Your book</p>
     </a>
     <!-- <a href="/profile/" style="text-decoration: none;">
         <p id="search_m">Get To Your Profile</p>
