--- a/templets/home.html
+++ b/templets/home.html
@@ -195,7 +195,7 @@
 {% block content %}
 <div class="main_name">
     <p class="main_head">Welcome to</p>
-    <p class="main_head">Get Your Book (testing phase)</p>
+    <p class="main_head">Get Your Book</p>
     <a href="/book_main/" style="text-decoration: none;">
         <p id="search_m">Search for Your book</p>
     </a>
